# CT_app

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_resource_metrics.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  serialization.py
backend/app/core/: __init__.py  config.py  datetime_util.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  models.py  repositories.py  session.py
backend/app/domain/: __init__.py  clock.py  engine.py  interfaces.py  market.py  tp_sl.py  types.py
backend/app/events/: __init__.py  bus.py  consumer.py  control.py  schemas.py  topics.py
backend/app/exchange/: __init__.py
backend/app/risk/: __init__.py  config.py  sizer.py
backend/app/services/: __init__.py  builder.py  metrics.py  run_config.py  run_manager.py
backend/app/strategies/: __init__.py  autoscan_ladder.py  base.py  guarded_ladder.py  indicators.py  registry.py  scalp_momentum.py  trend_scanner.py
backend/scripts/: backtest_scalp.py
backend/tests/: conftest.py  test_account.py  test_builder.py  test_engine_equivalence.py  test_exchange_protections.py  test_guarded_ladder.py  test_klines.py  test_live_feed.py  test_live_position_parse.py  test_logs_api.py  test_market_tickers.py  test_realtime_hub.py  test_rest_klines.py  test_risk_sizer.py  test_scalp_momentum.py  test_signing.py  test_sim_broker.py  test_tp_sl.py  test_trend_scanner.py  test_workspace_events.py  test_ws.py
(+84 files in other folders)
